cmake_minimum_required(VERSION 3.22)
project(learnCpp)

set(CMAKE_CXX_STANDAD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# add_subdirectory(8.1_oop_class)
# add_subdirectory(8.2_encapsulation_access)
# add_subdirectory(8.3_constructors)
# add_subdirectory(8.4_constructors_member_init)
# add_subdirectory(8.5_delegating_constructors)
# add_subdirectory(8.6_destructor)
# add_subdirectory(8.7_this_pointer_chaining_member)
# add_subdirectory(8.8_class_header)
# add_subdirectory(8.9_class_const)
# add_subdirectory(8.10_static_member_variable)
# add_subdirectory(8.11_static_member_function)
# add_subdirectory(8.12_friend)
# add_subdirectory(8.15_run_time_measure)

# add_subdirectory(9.8_type_cast_overloading)

# add_subdirectory(10.2_composition_relation)
# add_subdirectory(10.3_aggregation_relation)
# add_subdirectory(10.4_association_relation)
# add_subdirectory(10.5_dependency_relation)

# add_subdirectory(11.1_inheritance_1)
# add_subdirectory(11.2_inheritance_2)
# add_subdirectory(11.3_inheritance_sequence)
# add_subdirectory(11.6_inheritance_override)
# add_subdirectory(11.7_inheritance_multiple)

# add_subdirectory(12.1_polymorphism)
# add_subdirectory(12.2_polymorphism_virtual)
# add_subdirectory(12.3_override_final_covariant_return)
# add_subdirectory(12.4_virtual_destructor)
# add_subdirectory(12.5_binding)
# add_subdirectory(12.6_virtual_table)
# add_subdirectory(12.7_pure_abstract_interface)
# add_subdirectory(12.8_virtual_diamond_inheritance)
# add_subdirectory(12.9_object_slicing_reference_wrapper)
# add_subdirectory(12.10_dynamic_casting)
# add_subdirectory(12.11_derived_class_print_overload)

# add_subdirectory(13.1_function_template)
# add_subdirectory(13.2_class_template)
# add_subdirectory(13.3_template_parameter)
# add_subdirectory(13.4_function_template_specialization)
# add_subdirectory(13.5_class_template_specialization)
# add_subdirectory(13.6_partial_specialization)
# add_subdirectory(13.7_pointer_template_specialization)
# add_subdirectory(13.8_member_function_template)

add_subdirectory(14.1_exception)
add_subdirectory(14.2_stack_unwinding)
add_subdirectory(14.3_exception_inheritance)
add_subdirectory(14.4_std_exception)
add_subdirectory(14.5_function_try)
add_subdirectory(14.6_exception_hazzard)

add_subdirectory(15.1_smart_pointer)
add_subdirectory(15.2_right_value_reference)
add_subdirectory(15.3_move_constructors_assignment)
add_subdirectory(15.4_std_move)
add_subdirectory(15.5_unique_ptr)
add_subdirectory(15.6_shared_ptr)
add_subdirectory(15.7_circular_dependency)

add_subdirectory(16.1_standard_template_containers)
add_subdirectory(16.2_iterators)
add_subdirectory(16.3_stl_algorithm)

add_subdirectory(18.5_regular_expression)

add_subdirectory(19.3_std_thread)
add_subdirectory(19.4_race_condition)
add_subdirectory(19.5_task_based_async)
add_subdirectory(19.6_multithreading_ex)